@@ -12,3 +12,4 @@ t/02-basic.t
 t/03-exceptions.t
 t/04-pod.t
 t/05-RT-100886.t
+t/06-RT-84141.t
