@@ -2,6 +2,8 @@ Release history for Time-Out
 
 0.12  Mon Oct 30 14:25:52 CET 2023
       - Fix POD sample code [rt.cpan.org #100886] 
+      - Nested timeouts require minimum Time::HiRes version
+        [rt.cpan.org #84141]
 
 0.11  Tue Jan 15 11:36:27 EST 2008
       - Applied patch by Jens Heunemann to fix a race condition as well as some
